# GeometryArtist

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/app/: CMakeLists.txt  main.cpp
src/app/include/: geometry_artist_main.h
src/app/src/: geometry_artist_main.cpp
src/app/ui/main_window/: geometry_artist_main.ui
src/scene_core/ga_scene/: CMakeLists.txt
src/scene_core/ga_scene/include/: geomart_scene_entity.h  geomart_scene_manager.h
src/scene_core/ga_scene/src/: geomart_scene_entity.cpp  geomart_scene_manager.cpp
